tests/error/if_consteval_error_then_block.bz
// error: invalid conversion from '__null_t' to 'i32'
function test()
{
	let _ = if consteval (true) { [ null as i32 ] } else { 0 };
}
